# UrbanFlow

./: README.md  pyproject.toml
src/urbanflow/: __init__.py  api.py  cli.py  config.py  exceptions.py  logging_utils.py
src/urbanflow/data/: od_generator.py  synthetic_avl.py
src/urbanflow/exports/: diff_report.py  gtfs_writer.py  vehicle_block_writer.py
src/urbanflow/graph/: build_graph.py  graph_io.py
src/urbanflow/gtfs/: canonicalizer.py  parser.py  validator.py
src/urbanflow/optimizer/: evaluator.py  greedy_seed.py  local_search.py
src/urbanflow/viz/: folium_maps.py
tests/: test_optimizer_small_feed.py  test_parser.py  test_validator.py
urbanflow-mvp/: README.md  pyproject.toml
urbanflow-mvp/notebooks/: demo_notebook.ipynb
urbanflow-mvp/src/urbanflow/: __init__.py  api.py  cli.py  config.py
urbanflow-mvp/src/urbanflow/data/: __init__.py  od_generator.py  synthetic_avl.py
urbanflow-mvp/src/urbanflow/exports/: __init__.py  gtfs_writer.py  vehicle_block_writer.py
urbanflow-mvp/src/urbanflow/graph/: __init__.py  build_graph.py  graph_io.py
urbanflow-mvp/src/urbanflow/gtfs/: __init__.py  canonicalizer.py  parser.py  validator.py
urbanflow-mvp/src/urbanflow/optimizer/: __init__.py  evaluator.py  greedy_seed.py  local_search.py
urbanflow-mvp/src/urbanflow/viz/: __init__.py  folium_maps.py
urbanflow-mvp/tests/: conftest.py  test_optimizer_small_feed.py  test_parser.py  test_validator.py
