[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urbanflow"
version = "0.1.0"
description = "UrbanFlow MVP: GTFS ingestion, validation, optimization, and visualization pipeline."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  { name = "UrbanFlow Team" }
]
dependencies = [
  "pandas>=2.2.0",
  "geopandas>=0.14.0",
  "numpy>=1.26.0",
  "scipy>=1.11.0",
  "networkx>=3.2.0",
  "folium>=0.15.0",
  "fastapi>=0.110.0",
  "uvicorn>=0.23.0",
  "pydantic>=2.0.0",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
  "mypy>=1.5.0",
  "ruff>=0.4.0",
]

[project.urls]
homepage = "https://example.com/urbanflow"
repository = "https://example.com/urbanflow/repo"

[project.scripts]
urbanflow = "urbanflow.cli:main"

[tool.setuptools.packages.find]
where = ["src"]


